tests/expectations/compiler/tuple/access_negative_fail.out
Error [EPAR0370047]: expected field name or tuple index
    --> compiler-test:5:21
     |
   5 |     return (t.0, t. - 1); // Index `t.-1` is invalid.
     |                     ^
